--- a/Edurem/Views/Account/Home.cshtml
+++ b/Edurem/Views/Account/Home.cshtml
@@ -1,9 +1,7 @@
-﻿@model Edurem.Models.User
-
+﻿
 @{
-    ViewData["Title"] = Model.Surname + " " + Model.Name;
+    ViewData["Title"] = Context.User.GetClaim(ClaimKey.Surname) + " " + Context.User.GetClaim(ClaimKey.Name);
     ViewData["ApplicationName"] = "Edurem";
-    ViewData["AuthenticatedUser"] = Model;
     Layout = "_AccountLayout";
 }
 <div class="container-fluid">
