--- a/Edurem/Components/EditPost.razor
+++ b/Edurem/Components/EditPost.razor
@@ -1,12 +1,12 @@
 ﻿@inject Edurem.Services.IMarkdownService MarkdownService;
 @inject Edurem.Services.IFileService FileService;
 @inject Edurem.Services.IGroupService GroupService;
+@inject Edurem.Services.IPostService PostService;
 @inject NavigationManager NavigationManager;
 @inject IJSRuntime JsRuntime;
 @inject IHttpClientFactory HttpFactory;
 @using System.IO;
-@using ColorCode;
-@using Jering.Web.SyntaxHighlighters.Prism;
+@using Edurem.ViewModels;
 @using Blazored.TextEditor;
 
 <form action="">
@@ -14,7 +14,12 @@
         <div class="col-12">
             <div class="row mt-2">
                 <div class="col-6">
-                    <input class="form-control" @onchange="e => PostTitle = e.Value.ToString()" style="font-size: 18px" placeholder="Название поста" />
+                    <input class="form-control @(IsTitleValid ? "" : "border-danger")" @oninput="e => { PostTitle = e.Value.ToString(); IsTitleValid = true; }"
+                           style="font-size: 18px" placeholder="Название поста" />
+                    @if (!IsTitleValid)
+                    {
+                        <span class="text-danger">Введите название публикации</span>
+                    }
                 </div>
             </div>
             <div class="row">
@@ -28,6 +33,11 @@
                             }
                         </MatTabGroup>
                     </MatThemeProvider>
+                </div>
+                <div class="col-3">
+                </div>
+                <div class="col-3">
+                    <a href="#" @onclick="e => IsTestOpened = true" @onclick:preventDefault><p style="font-size: 18px"><i style="color: green" class="fas fa-plus"></i> Тестирование</p></a>
                 </div>
             </div>
 
@@ -125,26 +135,27 @@
                     </BlazoredTextEditor>
                 </div>
             </div>
-            <div class="row mt-3 mb-2">
-                <div class="col-12">
+            <div class="row mt-3 mb-2 justify-content-center">
+                <div class="col-8 col-xl-6">
                     <MatThemeProvider Theme="theme">
-                        <MatFileUpload Style="18px" Label="Выберите файлы или перетащите их сюда" Class="border" OnChange="FilesReadyForUpload" AllowMultiple="true"></MatFileUpload>
+                        <MatFileUpload Style="18px" Label="Выберите файлы или перетащите их сюда" Class="border" OnChange="files => FilesReadyForUpload(files, postFilesToUpload, postFilesToPrepare)" AllowMultiple="true">
+                        </MatFileUpload>
                     </MatThemeProvider>
                 </div>
             </div>
             <div class="row mb-3">
-                @foreach (var file in filesToUpload)
+                @foreach (var file in postFilesToUpload)
                 {
                     <div class="col-2">
                         <div class="card">
                             <div class="card-body" style="padding-top: 5px">
                                 <div class="row justify-content-end">
                                     <p style="font-size: 13px" class="mb-0">
-                                        <a href="" @onclick="e => DeleteFile(file)" @onclick:preventDefault="true">X</a>
+                                        <a href="" @onclick="e => DeleteFile(file, postFilesToUpload)" @onclick:preventDefault="true">X</a>
                                     </p>
                                 </div>
                                 <div class="row justify-content-center">
-                                    <i style="font-size:35px" class="@GetExtensionClass(file.File.Name.Split(".").Last())"></i>
+                                    <i style="font-size:35px" class="@FileService.GetExtensionClass(file.File.Name.Split(".").Last())"></i>
                                 </div>
                             </div>
                         </div>
@@ -162,7 +173,7 @@
                         </div>
                     </div>
                 }
-                @foreach (var file in filesToPrepare)
+                @foreach (var file in postFilesToPrepare)
                 {
                     @if (file.IsUploaded) continue;
                     <div class="col-2">
@@ -194,18 +205,109 @@
             </div>
             <div class="row">
                 <div class="col-3">
-                    <button class="btn btn-primary" type="button" style="font-size: 18px" @onclick="e => Confirm()">Опубликовать</button>
+                    <button class="btn btn-primary" type="button" style="font-size: 18px" @onclick="async e => { if (IsFormValid()) await Confirm(); }">Опубликовать</button>
                 </div>
             </div>
         </div>
     </div>
 </form>
 
+<!--Диалоговое окно ошибки-->
+<MatThemeProvider Theme="@dialogTheme">
+    <MatDialog @bind-IsOpen="@NotifyError">
+        <MatDialogTitle Class="text-center bg-danger">
+            <div class="col-12">
+                <i class="fas fa-times" style="font-size: 65px; color: white"></i>
+                <p style="color: white">Ошибка</p>
+            </div>
+        </MatDialogTitle>
+        <MatDialogContent>
+            <p class="mt-2 text-center">
+                @ErrorMessage
+            </p>
+        </MatDialogContent>
+        <MatDialogActions>
+            <MatButton Unelevated="true" Type="button" OnClick="@(e => { NotifyError = false; })">Закрыть</MatButton>
+        </MatDialogActions>
+    </MatDialog>
+</MatThemeProvider>
+
+<!--Диалоговое окно редактирования тестов-->
+<MatThemeProvider Theme="theme">
+    <MatDialog @bind-IsOpen="@IsTestOpened">
+        <MatDialogTitle>
+            <div class="row">
+                <div class="col-6">
+                    <p style="font-size: 20px" class="bold">Тестирование</p>
+                </div>
+                <div class="col-6">
+                    <p style="font-size: 18px" class="bold @(TestLanguage.IsLanguageDetected ? "" : "text-danger")">
+                        @TestLanguage.Language.LanguageTitle
+                    </p>
+                </div>
+            </div>
+        </MatDialogTitle>
+        <MatDialogContent>
+            <div class="row">
+                <ul class="col-12">
+                    @foreach (var testFile in testsToUpload)
+                    {
+                        <li class="row">
+                            <div class="col-6">
+                                <p>@testFile.File.Name</p>
+                            </div>
+                            <div class="col-3">
+                                <p>@FileSizeToText(testFile.File.Size)</p>
+                            </div>
+                            <div class="col-3">
+                                <a href="" @onclick:preventDefault="true"
+                                   @onclick="e =>
+                                         {
+                                             DeleteFile(testFile, testsToUpload);
+                                             TestLanguage.SetLanguage(testsToUpload.Select(test => test.File.Name.Split('.').Last()).ToArray());
+                                         }">
+                                    <b class="text-danger">X</b>
+                                </a>
+                            </div>
+                        </li>
+                    }
+                    @foreach (var testFile in testsToPrepare)
+                    {
+                        <li class="row">
+                            <div class="col-6">
+                                <p>@testFile.File.Name</p>
+                            </div>
+                            <div class="col-3">
+                                <p>@FileSizeToText(testFile.File.Size)</p>
+                            </div>
+                        </li>
+                    }
+                </ul>
+            </div>
+            <div class="row">
+                <MatThemeProvider Theme="theme">
+                    <MatFileUpload Style="18px" Label="Выберите файлы или перетащите их сюда" Class="border"
+                                   AllowMultiple="true"
+                                   OnChange="async files =>
+                                         {
+                                             await FilesReadyForUpload(files, testsToUpload, testsToPrepare);
+                                             TestLanguage.SetLanguage(testsToUpload.Select(test => test.File.Name.Split('.').Last()).ToArray());
+                                         }">
+                    </MatFileUpload>
+                </MatThemeProvider>
+            </div>
+        </MatDialogContent>
+
+        <MatDialogActions>
+            <MatButton Unelevated="true" Type="button" OnClick="@(e => { IsTestOpened = false; })">Готово</MatButton>
+        </MatDialogActions>
+    </MatDialog>
+</MatThemeProvider>
 
 @code {
 
     [Parameter]
-    public User CurrentUser { get; set; }
+    public CurrentUserViewModel CurrentUser { get; set; }
 
     [Parameter]
     public Group Group { get; set; }
@@ -213,6 +315,12 @@
     MatTheme theme = new MatTheme
     {
         Primary = "#007bff", // Цвет кнопки
+        Surface = "white" // Цвет фона диалогового окна
+    };
+
+    MatTheme dialogTheme = new MatTheme
+    {
+        Primary = "#FF8740", // Цвет кнопки
         Surface = "white" // Цвет фона диалогового окна
     };
 
@@ -233,6 +341,74 @@
         public bool IsUploaded { get; set; }
     }
 
+    static class TestLanguage
+    {
+        static TestLanguage()
+        {
+            Language = new CodeLanguage() { LanguageTitle = string.Empty };
+        }
+
+        public static CodeLanguage Language { get; set; }
+
+        public static bool IsLanguageDetected { get; set; }
+
+        public static string SetLanguage(params string[] fileExtensions)
+        {
+            var languages = fileExtensions.Select(extension => GetLanguage(extension)).Distinct();
+
+            // Если представлены файлы с одинаковым расширением
+            if (languages.Count() == 1)
+            {
+                // Если расширение не принадлежит поддерживаемым языкам
+                if (languages.First().Equals(Models.Language.DEFAULT))
+                {
+                    Language = new CodeLanguage
+                    {
+                        Language = Models.Language.DEFAULT,
+                        LanguageTitle = "Язык не определен"
+                    };
+                    IsLanguageDetected = false;
+                }
+                // Если расширение принадлежит поддерживаемому языку
+                else
+                {
+                    Language = new CodeLanguage();
+                    Language.SetLanguage(languages.First());
+                    IsLanguageDetected = true;
+                }
+            }
+            // Если представлены файлы с разными расширениями
+            else if (languages.Count() > 1)
+            {
+                Language = new CodeLanguage
+                {
+                    Language = Models.Language.DEFAULT,
+                    LanguageTitle = "Язык не определен"
+                };
+                IsLanguageDetected = false;
+            }
+            // Если файлов нет
+            else
+            {
+                Language = new CodeLanguage
+                {
+                    Language = Models.Language.DEFAULT,
+                    LanguageTitle = ""
+                };
+                IsLanguageDetected = false;
+            }
+
+            return Language.LanguageTitle;
+        }
+
+        private static Language GetLanguage(string fileExtension) => fileExtension switch
+        {
+            "cs" => Models.Language.CSHARP,
+            "py" or "pyw" or "pyd" => Models.Language.PYTHON,
+            _ => Models.Language.DEFAULT
+        };
+    }
+
     #endregion
 
     #region PROPERTIES
@@ -247,18 +423,37 @@
 
     string MarkdownText { get; set; }
 
-    List<FileToUpload> filesToUpload { get; set; }
+    List<FileToUpload> postFilesToUpload { get; set; }
 
-    List<FileToUpload> filesToPrepare { get; set; }
+    List<FileToUpload> postFilesToPrepare { get; set; }
+
+    List<FileToUpload> testsToUpload { get; set; }
+
+    List<FileToUpload> testsToPrepare { get; set; }
+
+    bool NotifyError { get; set; }
+
+    string ErrorMessage { get; set; }
+
+    bool IsTitleValid { get; set; }
+
+    bool IsTestOpened { get; set; }
 
     #endregion
 
     protected override void OnInitialized()
     {
         MarkdownText = string.Empty;
+        PostTitle = string.Empty;
+        NotifyError = false;
+        IsTestOpened = false;
+        IsTitleValid = true;
 
-        filesToUpload = new();
-        filesToPrepare = new();
+        postFilesToUpload = new();
+        postFilesToPrepare = new();
+
+        testsToUpload = new();
+        testsToPrepare = new();
 
         Position = MdPosition.COL;
 
@@ -271,26 +466,15 @@
         CurrentEditor = Editors[0].Type;
     }
 
-    string GetExtensionClass(string extension) => extension switch
-    {
-        "doc" or "docx" or "odt" => "far fa-file-word",
-        "xls" or "xlsx" => "far fa-file-excel",
-        "pdf" => "far fa-file-pdf",
-        "txt" => "far fa-file-alt",
-        "py" or "pyw" or "pyd" or "cs" or "cpp" or "php" or "html" or "css" => "far fa-file-code",
-        "png" or "jpg" or "jpeg" or "gif" => "far fa-file-image",
-        _ => "far fa-file"
-    };
-
     void MarkdownTextChanged(ChangeEventArgs e)
     {
         MarkdownText = e.Value.ToString();
     }
 
     // Добавлены новые файлы
-    async Task FilesReadyForUpload(IMatFileUploadEntry[] files)
+    async Task FilesReadyForUpload(IMatFileUploadEntry[] files, List<FileToUpload> filesToUpload, List<FileToUpload> filesToPrepare)
     {
-        // Добавляем файлы
+        // Добавление файлов
         foreach (var file in files)
         {
             if (filesToUpload.FirstOrDefault(item => item.File.Name == file.Name) is not null ||
@@ -308,7 +492,7 @@
 
         StateHasChanged();
 
-        // Загружаем файлы в MemoryStream
+        // Загрузка файлов в MemoryStream
         foreach (var file in filesToPrepare)
         {
             file.Stream = new MemoryStream();
@@ -318,35 +502,28 @@
 
             StateHasChanged();
         }
+        // Удаление
+        filesToPrepare.RemoveAll(file => file.IsUploaded == true);
 
-        filesToPrepare = new();
+
+        // Очистка полей ввода для файлов
         await JsRuntime.InvokeVoidAsync("clearInputFile");
     }
 
-    void DeleteFile(FileToUpload fileToDelete)
+    void DeleteFile(FileToUpload fileToDelete, List<FileToUpload> filesToUpload)
     {
         filesToUpload.Remove(filesToUpload.First(file => file.Equals(fileToDelete)));
     }
 
+    bool IsFormValid()
+    {
+        IsTitleValid = (PostTitle != string.Empty);
+
+        return IsTitleValid && (TestLanguage.IsLanguageDetected || testsToUpload.Count() == 0);
+    }
+
     async Task Confirm()
     {
-        // Модели файлов для связи с БД
-        var fileModels = new List<FileModel>();
-        foreach (var file in filesToUpload)
-        {
-            var filePath = Path.Combine("file_system\\users", CurrentUser.Id.ToString());
-
-            try
-            {
-                // Загрузка файлов на сервер
-                fileModels.Add(await FileService.UploadFile(file.Stream, filePath, $"{file.File.Name}"));
-            }
-            catch (Exception e)
-            {
-                Console.WriteLine(e.Message);
-            }
-        }
-
         if (!CurrentEditor.Equals(TextEditors.Markdown))
             await TextEditorChanged((int)TextEditors.Markdown);
 
@@ -360,7 +537,60 @@
             Title = PostTitle
         };
 
-        await GroupService.CreatePost(postModel, Group.Id, fileModels);
+        try
+        {
+            // Создание публикации
+            await GroupService.CreatePost(postModel, Group.Id);
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine(ex.Message);
+            ErrorNotification("Произошла непредвиденная ошибка. Попробуйте повторить операцию через несколько минут либо обратитесь в техническую поддержку");
+        }
+
+
+        // Модели файлов для связи с БД
+        var postFileModels = new List<FileModel>();
+        var testFileModels = new List<FileModel>();
+
+        foreach (var file in postFilesToUpload)
+        {
+            var filePath = Path.Combine("file_system\\users", CurrentUser.Id.ToString());
+
+            try
+            {
+                // Загрузка файлов на сервер
+                postFileModels.Add(await FileService.UploadFile(file.Stream, filePath, $"{file.File.Name}"));
+            }
+            catch (Exception e)
+            {
+                Console.WriteLine(e.Message);
+            }
+        }
+        // Добавление файлов к публикации
+        await PostService.AddFilesToPost(postModel.Id, postFileModels);
+
+        // Если добавлены тесты
+        if (testsToUpload is not null && testsToUpload.Count > 0)
+        {
+            foreach (var file in testsToUpload)
+            {
+                var filePath = Path.Combine("file_system\\tests", postModel.Id.ToString());
+
+                try
+                {
+                    // Загрузка тестов на сервер
+                    testFileModels.Add(await FileService.UploadFile(file.Stream, filePath, $"{file.File.Name}"));
+                }
+                catch (Exception e)
+                {
+                    Console.WriteLine(e.Message);
+                }
+            }
+            // Добавление тестов к публикации
+            await PostService.AddTestsToPost(postModel.Id, testFileModels);
+        }
+
 
         NavigationManager.NavigateTo($"group/{Group.Id}", true);
     }
@@ -401,5 +631,11 @@
     {
         size = size / 1000;
         return $"{size.ToString("0.00")} Кб";
+    }
+
+    void ErrorNotification(string errorMessage = "")
+    {
+        ErrorMessage = errorMessage;
+        NotifyError = true;
     }
 }
