--- a/Edurem/Views/Post/Test.cshtml
+++ b/Edurem/Views/Post/Test.cshtml
@@ -6,6 +6,8 @@
     Layout = "_AccountLayout";
 }
 <link href="~/codemirror/lib/codemirror.css" rel="stylesheet" />
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
 <div class="row">
     <div class="col-12">
