--- a/Edurem/Components/GenderPicker.razor
+++ b/Edurem/Components/GenderPicker.razor
@@ -24,6 +24,11 @@
     [Parameter]
     public string PickedGender { get; set; }
 
+    protected override void OnInitialized()
+    {
+        PickedGender = PickedGender ?? string.Empty;
+    }
+
     MatTheme theme = new MatTheme
     {
         Secondary = "#007bff"
