--- a/Edurem/Views/Administration/Register.cshtml
+++ b/Edurem/Views/Administration/Register.cshtml
@@ -62,6 +62,7 @@
                         <span asp-validation-for="Gender" class="text-danger" style="font-weight: bold"></span>
                     </div>
                 </div>
+                <input type="hidden" asp-for="Redirect" id="Redirect"/>
                 <div class="row">
                     <button type="submit" style="font-size: 20px" class="btn btn-primary btn-block">Зарегистрироваться</button>
                 </div>
