--- a/Edurem/Views/Shared/_Layout.cshtml
+++ b/Edurem/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <title>@ViewData["Title"] | @AppConfiguration["ApplicationName"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
+    <link href="~/_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/lib/animate.css-main/animate.min.css" />
     <link rel="stylesheet" href="~/fontawesome/css/all.css" />
     <link rel="shortcut icon" href="~/favicon3.ico">
@@ -82,8 +82,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="_framework/blazor.server.js"></script>
-    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
+    <script src="~/_framework/blazor.server.js"></script>
+    <script src="~/_content/MatBlazor/dist/matBlazor.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
